<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseStartingActivity">
    <TextView
        android:id="@+id/exerciseState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_exercising"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/exerciseTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="00:00"
        android:textSize="60sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseState" />
    <FrameLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseTimer">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:text="@string/start"
            android:textSize="25sp"
            android:background="@drawable/exercise_starting_button"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pauseButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/pause"
            android:textSize="25sp"
            android:background="@drawable/exercise_starting_button"
            android:layout_gravity="right|center_vertical"
            android:visibility="invisible"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@color/exercise_starting"
            android:gravity="center"
            android:text="@string/exercise_list"
            android:textSize="30sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/exercise_starting"
            android:gravity="center"
            android:text="@string/exercise_set"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>