<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">
    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="운동이름"
        android:textSize="25sp"
        android:paddingLeft="15dp"
        android:textColor="@color/pointColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_set"
            android:textSize="15sp"
            android:paddingLeft="10dp"/>
        <TextView
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_exercise_time"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="0dp"/>
        <TextView
            android:id="@+id/exerciseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30분30초"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_rest_time"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="0dp"/>
        <TextView
            android:id="@+id/restTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30분30초"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>
</layout>