<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dialog_item_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/dialog_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_list"
            android:textColor="@color/fontColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_list_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_set"
            android:textColor="@color/fontColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_list_title"
            app:layout_constraintTop_toTopOf="@+id/dialog_list_title" />

        <TextView
            android:id="@+id/dialog_set_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/pointColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_list_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_list_set"
            app:layout_constraintTop_toTopOf="@+id/dialog_list_title" />

        <TextView
            android:id="@+id/dialog_list_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routine_weight"
            android:textColor="@color/fontColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toEndOf="@+id/dialog_list_title" />

        <TextView
            android:id="@+id/dialog_weight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/pointColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_list_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toEndOf="@+id/dialog_list_weight"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_set"
            app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
